# guarddog

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  guarddog.db  hosts.yaml  pyproject.toml  requirements.txt  targets.yaml  test_uk.py
guarddog/: __main__.py  main.py  schemas.py
guarddog/models/: __init__.py  uptime_kuma.py
guarddog/utils/: __init__.py  dc.py  uk.py
