[tool.poetry]
name = "guarddog"
version = "0.1.0"
description = "Service Management Engine"
authors = ["Bryce Jenkins <bryce@durish.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
