[tool.poetry]
name = "guarddog"
version = "0.1.0"
description = ""
authors = ["Bryce Jenkins <bryce@durish.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fabric2 = "^3.2.2"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
